<resources>
    <string name="app_name">Loobster</string>
    <string name="create">Create</string>
    <string name="done">Done</string>
    <string name="create_something_great">Create something great</string>
    <string name="design">Design</string>
    <string name="choose_stage">choose stage</string>
    <string name="choose_project">choose project</string>
    <string name="lobster_task">Lobster Task</string>
    <string name="to_do">to-do</string>
    <string name="name">name</string>
    <string name="add_post_text">Add post text</string>
    <string name="add_photo">Add Photo</string>
    <string name="description_log_in">The App lets you connect, interact and update your products</string>
    <string name="recover_account_description">Enter mail to recover your account. Than we send special link to create new password.</string>
    <string name="create_password_description">You can use 5 or more characters. Minimum 1 character and 1 number.</string>
    <string name="recovery_account_success_description">Check your mail, open special link and create new password</string>
    <string name="password">Password</string>
    <string name="password_again">Password again</string>
    <string name="create_password">Create password</string>
    <string name="login">Login</string>
    <string name="success">Success!</string>
    <string name="recover_account">Recover account</string>
    <string name="error_recover_account">We don\'t have an account with this mail</string>
    <string name="email">Email</string>
    <string name="recover">Recover</string>
    <string name="error_log_in">Incorrect mail or password</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="sign_up">Sign Up</string>
    <string name="you_have_not_an_account">You have not an account?</string>
    <string name="forgot_password"><u>I forgot my password</u></string>
    <string name="log_in">Log In</string>
    <string name="demo"><![CDATA[Demo >]]></string>
    <string name="or">or</string>
    <string name="full_name">Full name</string>
    <string name="already_have_not_an_account">Already have not an account?</string>
    <string name="sign_up_with_facebook">Sign Up with Facebook</string>
    <string name="error_sign_up">This mail is already have in system</string>
    <string name="email_username">Email or username</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="delete">Delete</string>
    <string name="change_status">Change status</string>
    <string name="to_do_2">To-do</string>
    <string name="pause">Pause</string>
    <string name="doing">Doing</string>
    <string name="need_approve">Need approve</string>
    <string name="search">Search</string>
    <string name="high">high</string>
    <string name="description">Description</string>
    <string name="files">Files</string>
    <string name="see_more">See More</string>
    <string name="subtasks">Subtasks</string>
    <string name="new_subtask">New Subtask</string>
    <string name="comments">Comments (%1$d)</string>
    <string name="description_text"> Last month, my wife, Anne Doe, took me to Las Vegas because she had to go for a business convention. Last month, my wife, Anne Doe, took me to Las Vegas because she had to go for a business conv…</string>
    <string name="edit">Edit</string>
    <string name="action">Action</string>
    <string name="share">Share</string>
    <string name="comments1">Comments</string>
    <string name="more">more</string>
    <string name="less">less</string>

</resources>
