<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202020"
    android:orientation="vertical"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="58dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/create_password"
        android:textColor="#FFFFFF"
        android:textSize="33sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/create_password_description"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        />

    <EditText
        style="@style/recover_account_input"
        android:layout_marginTop="32dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/edit_text_color"
        />

    <EditText
        style="@style/recover_account_input"
        android:layout_marginTop="8dp"
        android:hint="@string/password_again"
        android:inputType="textPassword"
        android:textColor="@color/edit_text_color"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/authorization_bottom_bg"
        android:gravity="center"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:text="@string/create"
        android:textColor="#0B0B0B"
        android:textSize="20sp"
        />
</LinearLayout>