<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log_in_bg"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="128dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/demo"
                android:gravity="end"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="35dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/log_in"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:text="@string/description_log_in"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                />

            <EditText
                style="@style/authorization_input"
                android:layout_marginTop="30dp"
                android:hint="Email"
                android:inputType="textEmailAddress"
                />

            <EditText
                style="@style/authorization_input"
                android:layout_marginTop="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                />

            <TextView
                style="@style/authorization_bottom"
                android:text="@string/login"
                />

            <TextView
                android:id="@+id/recovery_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/i_forgot_my_password"
                android:textColor="#F3DCFA"
                android:textSize="16sp"
                />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:gravity="bottom"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/you_have_not_an_account"
                android:textColor="#C2A2D8"
                android:textSize="17sp"
                />

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/sign_up"
                android:textColor="#F8EBFD"
                android:textSize="17sp"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="#C2A2D8"
            android:textSize="17sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:src="@color/colorPrimary"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="6dp"
                android:text="@string/log_in_with_facebook"
                android:textColor="#F8EBFD"
                android:textSize="17sp"
                />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FF2D55"
        android:gravity="center"
        android:text="@string/error_log_in"
        android:textColor="#FFF9FA"
        android:visibility="gone"
        tools:visibility="visible"
        />
</FrameLayout>
