<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:id="@+id/action_task1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="right|center_vertical"
        >

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/active_icon"
            />

        <TextView
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:text="@string/action"
            android:textColor="#ff3b30"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:id="@+id/action_task"
        >

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/comments_icon"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:text="@string/comments1"
            android:textColor="#0079FF"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:gravity="right|center_vertical"
        >

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/share_icon"
            />

        <TextView
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:text="@string/share"
            android:textColor="#FF9500"
            />

    </LinearLayout>

</LinearLayout>